resolve power-button issue of stretching to size of flex container

--- a/project-2/final/index.css
+++ b/project-2/final/index.css
@@ -88,7 +88,8 @@ body {
     /* border: 1px solid red; */
 }
 #power-button {
-    width: 7%;
+    width: 11%;
+    align-self: center;
     cursor: pointer;
     padding-right: 5%;
 }
